--- a/Food Villa/index.css
+++ b/Food Villa/index.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Itim', cursive, 'sans-serif', sans-serif;
 }
 
 .header__container {
@@ -14,6 +17,15 @@
   color: white;
 }
 
+.title__container {
+  display: flex;
+  gap: 10px;
+}
+
+.logo {
+  width: 60px;
+}
+
 .nav-items ul {
   list-style-type: none;
   display: flex;
@@ -22,5 +34,22 @@
 
 .nav-items ul li {
   padding: 10px;
+  cursor: pointer;
   /* background-color: lightgreen; */
+}
+
+.restraunt__card {
+  width: 200px;
+  border: 1px solid black;
+  padding: 20px;
+  margin: 10px;
+}
+
+.restraunt__card > img {
+  width: 100%;
+}
+
+.body__container {
+  display: flex;
+  flex-wrap: wrap;
 }
